Fixing menu bar horizontal spacing

--- a/pages/cafe/css/gallery.css
+++ b/pages/cafe/css/gallery.css
@@ -1,113 +1,116 @@
 body {
-    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
-    overflow-x: hidden;
+  font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+  overflow-x: hidden;
 }
 body::after {
-    content: '';
-    background-image: url(/images/background.jpg);
-    opacity: 0.25;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    position: absolute;
-    z-index: -1;
+  content: '';
+  background-image: url(../images/background.jpg);
+  opacity: 0.25;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;
 }
-
 h1 {
-    display: inline-block;
-    font-weight: normal;
-    font-size: 72px;
+  display: inline-block;
+  font-weight: normal;
+  font-size: 72px;
 }
 ul {
-    display: flex;
-    justify-content: center;
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
+  list-style-type: none;
+  text-align: justify;
+  min-width: 500px;
+  padding: 0;
+  margin: 0;
+}
+ul::after {
+  content: '';
+  display: inline-block;
+  width: 100%;
 }
 ul li {
-    font-size: 30;
-    padding: 0;
-    margin: 0;
-    display: inline-block;
-    padding: 0px 14.7% 16px;
+  display: inline-block;
+  font-size: 30;
+  padding: 0;
+  margin: 0;
 }
 p {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 input {
-    width: 150px;
-    margin-right: 5px;
+  width: 150px;
+  margin-right: 5px;
 }
 a {
-    text-decoration: none;
-    color: black;
-    font-weight: 500;
+  text-decoration: none;
+  color: black;
+  font-weight: 500;
 }
 #logo {
-    float: inline-end;
+  float: inline-end;
 }
 #owner {
-    padding-right: 16px;
-    max-width: 536px;
-    float: left;
+  padding-right: 16px;
+  max-width: 536px;
+  float: left;
 }
 #line {
-    border: 1px solid black;
+  border: 1px solid black;
 }
 #home {
-    margin-right: 0.8%;
+  margin-right: 0.8%;
 }
 #faq {
-    margin-right: 0.2%;
+  margin-right: 0.2%;
 }
 #repeat {
-    margin-top: 100vh;
-    height: 80vh;
-    content: '';
-    background-image: url(/images/background.jpg);
-    opacity: 0.25;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    position: absolute;
-    z-index: -1;
+  margin-top: 100vh;
+  height: 80vh;
+  content: '';
+  background-image: url(../images/background.jpg);
+  opacity: 0.25;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;
 }
 .div3 img {
-    width: 400px;
-    padding: 10px;
+  width: 400px;
+  padding: 10px;
 }
 .parent {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 13vh 5% 1fr;
-    grid-column-gap: 16px;
-    grid-row-gap: 0px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 13vh 5% 1fr;
+  grid-column-gap: 16px;
+  grid-row-gap: 0px;
 
-    padding-left: 10%;
-    max-width: 80%;
+  padding-left: 10%;
+  max-width: 80%;
 }
 .div1 {
-    grid-area: 1 / 1 / 2 / 4;
+  grid-area: 1 / 1 / 2 / 4;
 
-    display: flex;
-    margin-bottom: 3%;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  margin-bottom: 3%;
+  justify-content: center;
+  align-items: center;
 }
 .div2 {
-    grid-area: 2 / 1 / 3 / 4;
+  grid-area: 2 / 1 / 3 / 4;
 }
 .div3 {
-    grid-area: 3 / 1 / 4 / 4;
+  grid-area: 3 / 1 / 4 / 4;
 
-    margin: 0 auto;
-    padding: 2% 0 10%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+  margin: 0 auto;
+  padding: 2% 0 10%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
